Fix future talk visibility and UI

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,19 +22,16 @@ body {
 header {
   background: var(--primary);
   padding: 1rem;
-  text-align: center;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 header .logo img {
-  display: block;
-  margin: 0 auto;
   height: 150px;
-
 }
 header nav {
-  margin-top: 0.5rem;
   display: flex;
   gap: 1rem;
-  justify-content: center;
 }
 header nav a {
   color: #fff;
@@ -58,6 +55,11 @@ footer {
 }
 footer a {
   color: #fff;
+}
+a:active,
+footer a:active,
+header nav a:active {
+  color: #A8DADC;
 }
 a {
   color: var(--primary);
